tests/test86.rael.exp
Error [tests/test86.rael:1:2]: Expected an expression after left paren
| (
|  ^
